--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,32 +19,6 @@
         android:layout_marginEnd="32dp"
         android:id="@+id/led" />
 
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/led"
-        android:layout_alignEnd="@+id/led"
-        android:layout_marginTop="30dp"
-        android:id="@+id/sound" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sound"
-        android:layout_alignEnd="@+id/sound"
-        android:layout_marginTop="30dp"
-        android:id="@+id/call" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/call"
-        android:layout_alignTop="@id/call"
-        android:text="Emergency Call"
-        android:layout_centerHorizontal="true"
-        android:textSize="24sp"
-        android:id="@+id/emgCt"/>
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,20 +36,16 @@
         android:src="@drawable/disconnected"
         android:id="@+id/icon"
         android:layout_centerHorizontal="true"/>
-
-
-
-    <TextView
+    <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/sound"
-        android:layout_alignTop="@id/sound"
-        android:text="Sound"
-        android:layout_centerHorizontal="true"
-        android:textSize="24sp"
-        android:id="@+id/soundt"/>
+        android:layout_marginTop="29dp"
+        android:id="@+id/sound"
+        android:layout_below="@id/led"
+        android:layout_alignStart="@id/led" />
 
     <EditText
+        android:layout_marginTop="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editcall"
@@ -85,6 +55,7 @@
         android:textSize="10sp"
         android:inputType="phone"/>
     <EditText
+        android:layout_marginTop="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tel"
@@ -93,7 +64,13 @@
         android:layout_toLeftOf="@id/editcall"
         android:textSize="10sp"
         android:inputType="phone"/>
-
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:id="@+id/call"
+        android:layout_below="@id/sound"
+        android:layout_alignStart="@id/sound" />
     <Button
         android:layout_width="60dp"
         android:layout_height="30dp"
@@ -102,4 +79,27 @@
         android:textSize="10sp"
         android:layout_below="@id/call"
         android:layout_toLeftOf="@id/call"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Emergency Call"
+        android:textSize="24sp"
+        android:id="@+id/emgCt"
+        android:layout_alignBaseline="@id/call"
+        android:layout_alignBottom="@id/call"
+        android:layout_centerHorizontal="true" />
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sound"
+        android:textSize="24sp"
+        android:id="@+id/soundt"
+        android:layout_above="@id/call"
+        android:layout_centerHorizontal="true" />
+
+
 </RelativeLayout>
