--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tel"
-        android:text="Tel:"
+        android:text="Emergency No.:"
         android:layout_below="@+id/emgCt"
         android:layout_toLeftOf="@id/editcall"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -80,7 +80,7 @@
         android:text="Edit"
         android:textSize="10sp"
         android:layout_below="@id/call"
-        android:layout_toRightOf="@id/editcall"
+        android:layout_toStartOf="@id/call"
         />
 
     <TextView
@@ -103,6 +103,22 @@
         android:id="@+id/soundt"
         android:layout_above="@id/call"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Emergency SMS"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/smst"
+        android:layout_below="@id/editcall"
+        android:layout_centerHorizontal="true"/>
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sms"
+        android:layout_below="@id/editcall"
+        android:layout_alignStart="@id/call"/>
 
 
 </RelativeLayout>
