--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,8 @@
         android:layout_below="@+id/emgCt"
         android:layout_centerHorizontal="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:inputType="phone"/>
+        android:inputType="phone"
+        android:maxLength="14"/>
     <EditText
         android:layout_marginTop="0dp"
         android:layout_width="wrap_content"
