--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,9 +159,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/errorinfo"
-        android:layout_toLeftOf="@id/smsno_textview"
+        android:layout_alignParentStart="true"
         android:layout_below="@id/smsno_textview"
-        android:id="@+id/info_imageview"/>
+        android:id="@+id/info_imageview"
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -173,6 +174,7 @@
         android:layout_marginLeft="10dp"
         android:background="@color/red"
         android:textColor="@color/white"
-        android:id="@+id/info_textview"/>
+        android:id="@+id/info_textview"
+        android:layout_margin="5dp"/>
 
 </RelativeLayout>
